@@ -3,7 +3,6 @@ package shared.interfaces;
 import com.artemis.E;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public enum Race {
@@ -13,7 +12,7 @@ public enum Race {
     DROW,
     DWARF;
 
-    private static final List<Race> VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<Race> VALUES = List.copyOf(Arrays.asList(values()));
 
     public static Race of(E entity) {
         int heroId = entity.getCharHero().heroId;
